--- a/index.HTML
+++ b/index.HTML
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
  <html>
     <head>
+        
         <title>First Project</title>
         <meta charset="UTF-8" >
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylecheet" href="style.css">
+        <link rel="stylesheet" href="./css/one.css">
         <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTUlIXYFo9VVwnJ1Gxe_djvu3JDKSklOz8wfw&s">
       
     </head>
@@ -121,6 +122,26 @@
             b
         </OPtion>
     </select> -->
-    <script SRC="STYLE.CSS"></script>
+   <!-- <div>
+    <P class="para"> hi   </P>
+  
+    </div>
+    <div>  <hi>mmdd</hi></div> -->
+    <!-- <div class="parent">
+        <img src="https://t3.ftcdn.net/jpg/05/69/37/42/360_F_569374252_MibZowvlZC0fYV3eGCD9sXL9AYDlvKfd.jpg" alt="image">
+    </div>
+    <div class="child">
+        <h1 class="text">Hello sa3dollah</h1>
+        <p class="pa">this is test page</p>
+    </div> -->
+    <div class="parent">
+        <div class="child"></div>
+        <div class="child"></div>
+        <div class="child"></div>
+        <div class="child"></div>
+        <div class="child"></div>
+        <div class="child"></div>
+    </div>
+
     </BODY>
 </html>
