--- a/tasks/task2/index.html
+++ b/tasks/task2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JFC</title>
+    <title>JFC section</title>
     <link rel="stylesheet" href="./style2.css">
     <link rel="shortcut icon" href="https://mohameds16.github.io/jfc-consultant/images/cons-logo.webp">
 </head>
