--- a/HTML/index.HTML
+++ b/HTML/index.HTML
@@ -5,9 +5,11 @@
         <title>First Project</title>
         <meta charset="UTF-8" >
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./css/one.css">
+        <link rel="stylesheet" href="C:\Users\dell\Desktop\FIRST PROJECT\css\one.css">
         <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTUlIXYFo9VVwnJ1Gxe_djvu3JDKSklOz8wfw&s">
-      
+      <style>
+        
+      </style>
     </head>
     <BODY>
         <!-- <H1> TITLE</H1>
@@ -134,7 +136,7 @@
         <h1 class="text">Hello sa3dollah</h1>
         <p class="pa">this is test page</p>
     </div> -->
-    <nav><div class="top"></div></nav>
+    <!-- <nav><div class="top"></div></nav>
     <div class="parent">
         <div class="child"></div>
         <div class="child"></div>
@@ -142,7 +144,22 @@
         <div class="child"></div>
         <div class="child"></div>
         <div class="child"></div>
+    </div> -->
+<!-- 
+    <div class="container">
+		<div calass="child"></div>
+		<div calass="child"></div>
+		<div calass="child"></div>
+		<div calass="child"></div>
+		<div calass="child"></div>
+		<div calass="child"></div>
+		<div calass="child"></div>
+		<div calass="child"></div>
+	</div> -->
+    <div class="container">
+        <div class="parent">
+            <div class="child"></div>
+        </div>
     </div>
-
     </BODY>
 </html>
