--- a/HTML/index.HTML
+++ b/HTML/index.HTML
@@ -156,10 +156,17 @@
 		<div calass="child"></div>
 		<div calass="child"></div>
 	</div> -->
-    <div class="container">
+    <!-- <div class="container">
         <div class="parent">
             <div class="child"></div>
         </div>
-    </div>
-    </BODY>
+    </div> -->
+ <DIVc class="p">
+    <div></div>
+    <a class="instagram"><img src="https://mohameds16.github.io/jfc-consultant/images/icons/instagram.webp" alt=""></a>
+    <a class="facebook"><img src="https://mohameds16.github.io/jfc-consultant/images/icons/facebook.webp" alt=""></a>
+    <a class="googlemaps"><img src="https://mohameds16.github.io/jfc-consultant/images/icons/map.webp" alt=""></a>
+    
+ </DIV>
+</BODY>
 </html>
