--- a/tasks/js-assignment/index.html
+++ b/tasks/js-assignment/index.html
@@ -6,7 +6,7 @@
     <title>assignment1</title>
 </head>
 <body>
-  <script src="./index.html">
+  <script src="./js.js">
     
   </script>  
 </body>
