--- a/session/notes/index.html
+++ b/session/notes/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Notes</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-   <section class="container">
-        <form>
-            <input class="title-input" placeholder="Title" type="text">
-            <textarea  placeholder="Descreption" class="descreption-input"></textarea>
-            <button class="btn">Submit</button>
-            <button class="formUpdate hide" >Update</button>
-            
-        </form>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <section class="container">
+      <form>
+        <div class="card">
+          <input class="title-input" placeholder="Title" type="text" />
+          <textarea
+            placeholder="Description"
+            class="descreption-input"
+          ></textarea>
+          <button class="btn">Submit</button>
+          <button class="formUpdate hide">Update</button>
+        </div>
+      </form>
+    </section>
+    <div class="widths"><div class="notes"></div></div>
 
-   </section>
-   <div class="widths"><div class="notes"></div></div>
-   
-
-   <script src="./js.js"></script>
-</body>
+    <script src="./js.js"></script>
+  </body>
 </html>
